     This change was made to support future HTTP/1.x protocols which
     may require clients to send absoluteURIs for all requests.

     In order to achieve this change subtle changes were made to the API.  In a
     request_rec, r->hostlen has been removed.  r->unparsed_uri now exists so
     that the unmodified uri can be retrieved easily.  r->proxyreq is not set
     until the translate_names phase. 

     Plus changes to the virtualhost test suite for absoluteURI testing.
     [Dean Gaudet]

  *) Cleanup of code in http_vhost.c, and remove vhost matching code from
     mod_rewrite.  The vhost matching is now performed by a globally
     available function matches_request_vhost().  [Dean Gaudet]

  *) Reduce memory usage, and speed up ServerAlias support.  As a
     side-effect users can list multiple ServerAlias directives
     and they're all considered.
     [Chia-liang Kao <clkao@cirx.org>] PR#1531

  *) The "poly" directive in image maps did not include the borders of the
     polygon, whereas the "rect" directive does.  Fix this inconsistency.
     [Konstantin Morshnev <moko@design.ru>] PR#1771

  *) Make \\ behave as expected.  [Ronald.Tschalaer@psi.ch]

  *) Add `Rule HIDE' to Configuration to hide the Apache symbol
     namespace from conflicting with third-party libraries some
     modules force to be linked with Apache. [Ralf S. Engelschall]

  *) Add the `%a' construct to LogFormat and CustomLog to log the client IP
     address. [Todd Eigenschink <eigenstr@mixi.net>, PR#1885]

  *) A new source module main/util_uri.c; It contains a routine
     parse_uri_components() and friends which breaks a URI into its component
     parts.  These parts are stored in a uri_components structure called
     parsed_uri within each request_rec, and are available to all modules.
     Additionally, an unparse routine is supplied which re-assembles the URI
     components back to an URI, optionally hiding the username:password@ part